--- a/public/performance-analysis.html
+++ b/public/performance-analysis.html
@@ -377,10 +377,20 @@
     <div class="container">
         <div class="header">
             <div class="navigation">
-                <a href="/" class="nav-link">
-                    <i class="fas fa-arrow-left"></i>
-                    Back to Dashboard
-                </a>
+                <div style="display: flex; gap: 15px; flex-wrap: wrap;">
+                    <a href="/" class="nav-link">
+                        <i class="fas fa-list-alt"></i>
+                        Recent API Calls
+                    </a>
+                    <a href="performance-analysis.html" class="nav-link" style="background: #667eea; color: white;">
+                        <i class="fas fa-chart-line"></i>
+                        Performance Analysis
+                    </a>
+                    <a href="response-time-dashboard.html" class="nav-link">
+                        <i class="fas fa-clock"></i>
+                        Response Time Monitor
+                    </a>
+                </div>
             </div>
             
             <h1>
